--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,3 @@
-:root {
-  --background-clr: #5e565a;
-  --primary-clr: #f3f1d8;
-  --secondary-clr: #ff934f;
-}
-
-html {
-  font-size: 10px;
-}
-
-body {
-  background-color: var(--background-clr);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 .navbar {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -29,9 +11,53 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-right: 1rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .hamburger-menu {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 2rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  width: 2.5rem;
+}
+
+.hamburger-menu-bar {
+  background-color: var(--primary-clr);
+  border-radius: 1.5px;
+  height: 0.4rem;
+  width: 2.5rem;
+}
+.hamburger-menu-bar::before, .hamburger-menu-bar::after {
+  background-color: var(--primary-clr);
+  border-radius: 1.5px;
+  height: 0.4rem;
+  width: 2.5rem;
+  content: "";
+  position: absolute;
+}
+.hamburger-menu-bar::before {
+  top: 0;
+}
+.hamburger-menu-bar::after {
+  bottom: 0;
+}
+
+.header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -42,16 +68,109 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 2rem;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 2.5rem;
+  height: 614px;
+  overflow: hidden;
+  padding-top: 9rem;
+  position: relative;
+}
+.header .greetings {
+  color: var(--primary-clr);
+  font-family: var(--titles-font);
+  font-size: 5.5rem;
+  line-height: 5.5rem;
+  margin: 0;
+}
+.header .greetings-sub {
+  border-bottom: 1px solid var(--primary-clr);
+  color: var(--secondary-clr);
+  font-family: var(--titles-font);
+  font-size: 2.35rem;
+  line-height: 2.35rem;
+  margin: 0.3rem 0 0 0;
+  padding-bottom: 1.2rem;
+}
+.header .description {
+  color: var(--primary-clr);
+  font-family: var(--titles-font);
+  font-size: 1.4rem;
+  line-height: 2.2rem;
+  margin-bottom: 0;
+  text-align: center;
+  width: 80%;
+}
+.header .self-picture-wrapper {
+  border: 5px solid var(--secondary-clr);
+  border-radius: 50%;
+  height: 10rem;
+  margin-top: 4rem;
+  width: 10rem;
+}
+.header .self-picture {
+  border-radius: 50%;
+  width: 100%;
+}
+.header .myname {
+  color: var(--primary-clr);
+  font-family: var(--name-font);
+  font-size: 3.6rem;
+  line-height: 4.3rem;
+  margin-top: 0.5rem;
+  text-align: center;
+  width: 60%;
+}
+.header .triangle-small {
+  background-color: var(--primary-clr);
+  height: 70px;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 70px;
+  top: 275px;
+  left: -35px;
+}
+.header .triangle-medium {
+  background-color: var(--primary-clr);
+  height: 108px;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 108px;
+  bottom: 130px;
+  right: -54px;
+}
+.header .triangle-big {
+  background-color: var(--primary-clr);
+  height: 132px;
+  position: absolute;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 132px;
+  bottom: -67px;
+  left: -15px;
 }
 
-.hamburger-menu-bar {
-  background-color: var(--primary-clr);
-  border-radius: 1.5px;
-  height: 0.4rem;
-  width: 2.5rem;
+:root {
+  --background-clr: #5e565a;
+  --primary-clr: #f3f1d8;
+  --secondary-clr: #ff934f;
+  --titles-font: "Libre Baskerville", serif;
+  --text-font: "Hind", sans-serif;
+  --name-font: "Parisienne", cursive;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  background-color: var(--background-clr);
+  margin: 0;
+  padding: 0;
 }
