--- a/css/main.css
+++ b/css/main.css
@@ -88,8 +88,8 @@
   font-family: var(--titles-font);
   font-size: 2.35rem;
   line-height: 2.35rem;
-  margin: 0.3rem 0 0 0;
-  padding-bottom: 1.2rem;
+  margin: 0;
+  padding-bottom: 1.3rem;
 }
 
 .description {
@@ -98,6 +98,7 @@
   font-size: 1.4rem;
   line-height: 2.2rem;
   margin-bottom: 0;
+  margin-top: 1.2rem;
   text-align: center;
   width: 80%;
 }
@@ -106,7 +107,7 @@
   border: 5px solid var(--secondary-clr);
   border-radius: 50%;
   height: 10rem;
-  margin-top: 4rem;
+  margin-top: 3.7rem;
   width: 10rem;
 }
 
@@ -120,7 +121,7 @@
   font-family: var(--name-font);
   font-size: 3.6rem;
   line-height: 4.3rem;
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
   text-align: center;
   width: 60%;
 }
@@ -132,7 +133,7 @@
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   width: 70px;
-  top: 275px;
+  top: 278px;
   left: -35px;
 }
 
@@ -143,7 +144,7 @@
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   width: 108px;
-  bottom: 130px;
+  bottom: 142px;
   right: -54px;
 }
 
@@ -155,7 +156,7 @@
           transform: rotate(45deg);
   width: 132px;
   bottom: -67px;
-  left: -15px;
+  left: -12px;
 }
 
 .about-me {
@@ -171,14 +172,6 @@
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 3rem 1rem;
-}
-
-.title {
-  color: var(--primary-clr);
-  font-family: var(--titles-font);
-  font-size: 3.6rem;
-  line-height: 3.6rem;
-  margin: 0 0 3rem 0;
 }
 
 .list {
@@ -210,6 +203,87 @@
   margin: 3px 0 0 1.2rem;
 }
 
+.portfolio {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 3rem 1rem 4rem;
+}
+.portfolio .description {
+  margin-top: -0.5rem;
+}
+
+.portfolio-example-wrapper {
+  background-color: var(--primary-clr);
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 15px 10px -10px rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 4.4rem 0 0 0;
+  padding: 2.5rem;
+  position: relative;
+  width: 30rem;
+}
+.portfolio-example-wrapper::before, .portfolio-example-wrapper::after {
+  background-color: transparent;
+  bottom: 8.5%;
+  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.3);
+  content: "";
+  position: absolute;
+  width: 95%;
+  height: 2rem;
+  z-index: -1;
+}
+.portfolio-example-wrapper::before {
+  left: 1rem;
+  -webkit-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+}
+.portfolio-example-wrapper::after {
+  right: 1rem;
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
+
+.portfolio-example-img {
+  margin-top: 0;
+  width: 100%;
+}
+
+.portfolio-example-title {
+  color: var(--background-clr);
+  font-family: var(--text-font);
+  font-weight: bold;
+  font-size: 2.3rem;
+  line-height: 2.3rem;
+  margin: 2rem 0 0 0;
+}
+
+.portfolio-example-description {
+  color: var(--background-clr);
+  font-family: var(--text-font);
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  margin: 1rem 0 0 0;
+}
+
 :root {
   --background-clr: #5e565a;
   --primary-clr: #f3f1d8;
@@ -234,4 +308,12 @@ body {
   background-color: var(--background-clr);
   margin: 0;
   padding: 0;
+}
+
+.sections-title {
+  color: var(--primary-clr);
+  font-family: var(--titles-font);
+  font-size: 3.6rem;
+  line-height: 3.6rem;
+  margin: 0 0 2.5rem 0;
 }
