--- a/scss/_section-header.scss
+++ b/scss/_section-header.scss
@@ -22,8 +22,8 @@
   font-family: var(--titles-font);
   font-size: 2.35rem;
   line-height: 2.35rem;
-  margin: 0.3rem 0 0 0;
-  padding-bottom: 1.2rem;
+  margin: 0;
+  padding-bottom: 1.3rem;
 }
 
 .description {
@@ -32,6 +32,7 @@
   font-size: 1.4rem;
   line-height: 2.2rem;
   margin-bottom: 0;
+  margin-top: 1.2rem;
   text-align: center;
   width: 80%;
 }
@@ -40,7 +41,7 @@
   border: 5px solid var(--secondary-clr);
   border-radius: 50%;
   height: 10rem;
-  margin-top: 4rem;
+  margin-top: 3.7rem;
   width: 10rem;
 }
 
@@ -54,25 +55,25 @@
   font-family: var(--name-font);
   font-size: 3.6rem;
   line-height: 4.3rem;
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
   text-align: center;
   width: 60%;
 }
 
 .triangle-small {
   @include triangle(70px);
-  top: 275px;
+  top: 278px;
   left: -35px;
 }
 
 .triangle-medium {
   @include triangle(108px);
-  bottom: 130px;
+  bottom: 142px;
   right: -54px;
 }
 
 .triangle-big {
   @include triangle(132px);
   bottom: -67px;
-  left: -15px;
+  left: -12px;
 }
