--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,8 @@
 @import "section-header";
 @import "section-aboutme";
 @import "section-portfolio";
+@import "section-contact";
+@import "footer";
 
 :root {
   // KOLORY
@@ -37,5 +39,6 @@ body {
   font-family: var(--titles-font);
   font-size: 3.6rem;
   line-height: 3.6rem;
-  margin: 0 0 2.5rem 0;
+  margin: 0 0 3rem 0;
+  text-align: center;
 }
