--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,12 @@
   width: 100%;
   z-index: 1;
 }
+@media screen and (min-width: 576px) {
+  .navbar {
+    height: 6rem;
+    padding-right: 1.5rem;
+  }
+}
 
 .hamburger-menu {
   -webkit-box-align: center;
@@ -35,20 +41,38 @@
   position: relative;
   width: 2.5rem;
 }
+@media screen and (min-width: 576px) {
+  .hamburger-menu {
+    height: 3rem;
+    width: 3.5rem;
+  }
+}
 
 .hamburger-menu-bar {
   background-color: var(--primary-clr);
   border-radius: 1.5px;
   height: 0.4rem;
-  width: 2.5rem;
+  width: 100%;
+}
+@media screen and (min-width: 576px) {
+  .hamburger-menu-bar {
+    height: 0.6rem;
+    width: 3.5rem;
+  }
 }
 .hamburger-menu-bar::before, .hamburger-menu-bar::after {
   background-color: var(--primary-clr);
   border-radius: 1.5px;
-  height: 0.4rem;
-  width: 2.5rem;
   content: "";
+  height: 0.4rem;
   position: absolute;
+  width: 100%;
+}
+@media screen and (min-width: 576px) {
+  .hamburger-menu-bar::before, .hamburger-menu-bar::after {
+    height: 0.6rem;
+    width: 3.5rem;
+  }
 }
 .hamburger-menu-bar::before {
   top: 0;
@@ -73,6 +97,12 @@
   padding-top: 9rem;
   position: relative;
 }
+@media screen and (min-width: 576px) {
+  .header {
+    height: 985px;
+    padding-top: 11rem;
+  }
+}
 
 .greetings {
   color: var(--primary-clr);
@@ -80,6 +110,12 @@
   font-size: 5.5rem;
   line-height: 5.5rem;
   margin: 0;
+}
+@media screen and (min-width: 576px) {
+  .greetings {
+    font-size: 9.8rem;
+    line-height: 9.8rem;
+  }
 }
 
 .greetings-sub {
@@ -91,6 +127,13 @@
   margin: 0;
   padding-bottom: 1.3rem;
 }
+@media screen and (min-width: 576px) {
+  .greetings-sub {
+    font-size: 4.2rem;
+    line-height: 4.2rem;
+    padding-bottom: 2.5rem;
+  }
+}
 
 .description {
   color: var(--primary-clr);
@@ -100,7 +143,13 @@
   margin-bottom: 0;
   margin-top: 1.2rem;
   text-align: center;
-  width: 80%;
+  width: 70%;
+}
+@media screen and (min-width: 576px) {
+  .description {
+    font-size: 2rem;
+    line-height: 3.5rem;
+  }
 }
 
 .self-picture-wrapper {
@@ -109,6 +158,14 @@
   height: 10rem;
   margin-top: 3.7rem;
   width: 10rem;
+}
+@media screen and (min-width: 576px) {
+  .self-picture-wrapper {
+    border: 9px solid var(--secondary-clr);
+    height: 18rem;
+    margin-top: 4rem;
+    width: 18rem;
+  }
 }
 
 .self-picture {
@@ -121,9 +178,17 @@
   font-family: var(--name-font);
   font-size: 3.6rem;
   line-height: 4.3rem;
-  margin-top: 0.2rem;
+  margin-top: 0.5rem;
   text-align: center;
   width: 60%;
+}
+@media screen and (min-width: 576px) {
+  .myname {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+    margin-top: 2rem;
+    width: 100%;
+  }
 }
 
 .triangle-small {
@@ -133,8 +198,20 @@
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   width: 70px;
-  top: 278px;
   left: -35px;
+  top: 278px;
+}
+@media screen and (min-width: 576px) {
+  .triangle-small {
+    background-color: var(--primary-clr);
+    height: 140px;
+    position: absolute;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 140px;
+    left: -70px;
+    top: 445px;
+  }
 }
 
 .triangle-medium {
@@ -147,6 +224,18 @@
   bottom: 142px;
   right: -54px;
 }
+@media screen and (min-width: 576px) {
+  .triangle-medium {
+    background-color: var(--primary-clr);
+    height: 214px;
+    position: absolute;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 214px;
+    bottom: 90px;
+    right: -107px;
+  }
+}
 
 .triangle-big {
   background-color: var(--primary-clr);
@@ -157,6 +246,18 @@
   width: 132px;
   bottom: -67px;
   left: -12px;
+}
+@media screen and (min-width: 576px) {
+  .triangle-big {
+    background-color: var(--primary-clr);
+    height: 284px;
+    position: absolute;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 284px;
+    bottom: -142px;
+    left: -25px;
+  }
 }
 
 .about-me {
@@ -236,7 +337,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 4.4rem 0 0 0;
-  padding: 2.5rem;
+  padding-top: 2rem;
   position: relative;
   width: 30rem;
 }
@@ -263,21 +364,30 @@
 }
 
 .portfolio-example-img {
-  margin-top: 0;
+  display: block;
+  margin: 0 auto;
+  width: 85%;
+}
+
+.portfolio-example-description-wrapper {
+  background-color: var(--secondary-clr);
+  border-radius: 0.5rem;
+  margin-top: 1.5rem;
+  padding: 2rem 2rem 2rem 2.5rem;
   width: 100%;
 }
 
 .portfolio-example-title {
-  color: var(--background-clr);
+  color: var(--primary-clr);
   font-family: var(--text-font);
   font-weight: bold;
   font-size: 2.3rem;
   line-height: 2.3rem;
-  margin: 2rem 0 0 0;
+  margin: 0;
 }
 
 .portfolio-example-description {
-  color: var(--background-clr);
+  color: var(--primary-clr);
   font-family: var(--text-font);
   font-size: 1.4rem;
   line-height: 2.1rem;
@@ -300,7 +410,7 @@
 }
 .contact i {
   color: var(--background-clr);
-  font-size: 6rem;
+  font-size: 4rem;
   -webkit-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
