--- a/scss/_section-header.scss
+++ b/scss/_section-header.scss
@@ -6,6 +6,10 @@
   overflow: hidden;
   padding-top: 9rem;
   position: relative;
+  @include mq(576px) {
+    height: 985px;
+    padding-top: 11rem;
+  }
 }
 
 .greetings {
@@ -14,6 +18,10 @@
   font-size: 5.5rem;
   line-height: 5.5rem;
   margin: 0;
+  @include mq(576px) {
+    font-size: 9.8rem;
+    line-height: 9.8rem;
+  }
 }
 
 .greetings-sub {
@@ -24,6 +32,11 @@
   line-height: 2.35rem;
   margin: 0;
   padding-bottom: 1.3rem;
+  @include mq(576px) {
+    font-size: 4.2rem;
+    line-height: 4.2rem;
+    padding-bottom: 2.5rem;
+  }
 }
 
 .description {
@@ -34,7 +47,11 @@
   margin-bottom: 0;
   margin-top: 1.2rem;
   text-align: center;
-  width: 80%;
+  width: 70%;
+  @include mq(576px) {
+    font-size: 2rem;
+    line-height: 3.5rem;
+  }
 }
 
 .self-picture-wrapper {
@@ -43,6 +60,12 @@
   height: 10rem;
   margin-top: 3.7rem;
   width: 10rem;
+  @include mq(576px) {
+    border: 9px solid var(--secondary-clr);
+    height: 18rem;
+    margin-top: 4rem;
+    width: 18rem;
+  }
 }
 
 .self-picture {
@@ -55,25 +78,46 @@
   font-family: var(--name-font);
   font-size: 3.6rem;
   line-height: 4.3rem;
-  margin-top: 0.2rem;
+  margin-top: 0.5rem;
   text-align: center;
   width: 60%;
+  @include mq(576px) {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+    margin-top: 2rem;
+    width: 100%;
+  }
 }
 
 .triangle-small {
   @include triangle(70px);
-  top: 278px;
   left: -35px;
+  top: 278px;
+  @include mq(576px) {
+    @include triangle(140px);
+    left: -70px;
+    top: 445px;
+  }
 }
 
 .triangle-medium {
   @include triangle(108px);
   bottom: 142px;
   right: -54px;
+  @include mq(576px) {
+    @include triangle(214px);
+    bottom: 90px;
+    right: -107px;
+  }
 }
 
 .triangle-big {
   @include triangle(132px);
   bottom: -67px;
   left: -12px;
+  @include mq(576px) {
+    @include triangle(284px);
+    bottom: -142px;
+    left: -25px;
+  }
 }
