--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,11 @@
           flex-direction: column;
   padding: 3rem 1rem;
 }
+@media screen and (min-width: 576px) {
+  .about-me {
+    padding: 3rem 0;
+  }
+}
 
 .list {
   display: grid;
@@ -281,6 +286,11 @@
   margin: 0;
   padding: 0;
   width: 100%;
+}
+@media screen and (min-width: 576px) {
+  .list {
+    width: 45rem;
+  }
 }
 .list .box {
   -webkit-box-align: center;
@@ -299,6 +309,12 @@
   padding: 0 10px;
   text-transform: uppercase;
   width: 100%;
+}
+@media screen and (min-width: 576px) {
+  .list .box {
+    font-size: 2.8rem;
+    height: 5rem;
+  }
 }
 .list .box .category {
   margin: 3px 0 0 1.2rem;
@@ -482,4 +498,10 @@ body {
   line-height: 3.6rem;
   margin: 0 0 3rem 0;
   text-align: center;
+}
+@media screen and (min-width: 576px) {
+  .sections-title {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+  }
 }
