--- a/scss/_section-aboutme.scss
+++ b/scss/_section-aboutme.scss
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: column;
   padding: 3rem 1rem;
+  @include mq(576px) {
+    padding: 3rem 0;
+  }
 }
 
 .list {
@@ -12,6 +15,9 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  @include mq(576px) {
+    width: 45rem;
+  }
 
   .box {
     align-items: center;
@@ -26,6 +32,10 @@
     padding: 0 10px;
     text-transform: uppercase;
     width: 100%;
+    @include mq(576px) {
+      font-size: 2.8rem;
+      height: 5rem;
+    }
 
     .category {
       margin: 3px 0 0 1.2rem;
