--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,4 +41,8 @@ body {
   line-height: 3.6rem;
   margin: 0 0 3rem 0;
   text-align: center;
+  @include mq(576px) {
+    font-size: 4.5rem;
+    line-height: 4.5rem;
+  }
 }
