--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,12 @@
 .portfolio .description {
   margin-top: -0.5rem;
 }
+@media screen and (min-width: 576px) {
+  .portfolio .description {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+  }
+}
 
 .portfolio-example-wrapper {
   background-color: var(--primary-clr);
@@ -356,6 +362,12 @@
   padding-top: 2rem;
   position: relative;
   width: 30rem;
+}
+@media screen and (min-width: 576px) {
+  .portfolio-example-wrapper {
+    padding-top: 2.5rem;
+    width: 45rem;
+  }
 }
 .portfolio-example-wrapper::before, .portfolio-example-wrapper::after {
   background-color: transparent;
@@ -384,13 +396,24 @@
   margin: 0 auto;
   width: 85%;
 }
+@media screen and (min-width: 576px) {
+  .portfolio-example-img {
+    width: 90%;
+  }
+}
 
 .portfolio-example-description-wrapper {
   background-color: var(--secondary-clr);
-  border-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
   margin-top: 1.5rem;
   padding: 2rem 2rem 2rem 2.5rem;
   width: 100%;
+}
+@media screen and (min-width: 576px) {
+  .portfolio-example-description-wrapper {
+    padding: 2.5rem 3rem 2.5rem 3rem;
+  }
 }
 
 .portfolio-example-title {
@@ -401,6 +424,12 @@
   line-height: 2.3rem;
   margin: 0;
 }
+@media screen and (min-width: 576px) {
+  .portfolio-example-title {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+}
 
 .portfolio-example-description {
   color: var(--primary-clr);
@@ -408,6 +437,12 @@
   font-size: 1.4rem;
   line-height: 2.1rem;
   margin: 1rem 0 0 0;
+}
+@media screen and (min-width: 576px) {
+  .portfolio-example-description {
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+  }
 }
 
 .contact {
