--- a/scss/_section-portfolio.scss
+++ b/scss/_section-portfolio.scss
@@ -6,6 +6,10 @@
 
   .description {
     margin-top: -0.5rem;
+    @include mq(576px) {
+      font-size: 1.8rem;
+      line-height: 2.8rem;
+    }
   }
 }
 
@@ -20,7 +24,12 @@
   padding-top: 2rem;
   position: relative;
   width: 30rem;
+  @include mq(576px) {
+    padding-top: 2.5rem;
+    width: 45rem;
+  }
 
+  // CIENIE
   &::before,
   &::after {
     background-color: transparent;
@@ -48,14 +57,21 @@
   display: block;
   margin: 0 auto;
   width: 85%;
+  @include mq(576px) {
+    width: 90%;
+  }
 }
 
 .portfolio-example-description-wrapper {
   background-color: var(--secondary-clr);
-  border-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
   margin-top: 1.5rem;
   padding: 2rem 2rem 2rem 2.5rem;
   width: 100%;
+  @include mq(576px) {
+    padding: 2.5rem 3rem 2.5rem 3rem;
+  }
 }
 
 .portfolio-example-title {
@@ -65,6 +81,10 @@
   font-size: 2.3rem;
   line-height: 2.3rem;
   margin: 0;
+  @include mq(576px) {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
 
 .portfolio-example-description {
@@ -73,4 +93,8 @@
   font-size: 1.4rem;
   line-height: 2.1rem;
   margin: 1rem 0 0 0;
+  @include mq(576px) {
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+  }
 }
