--- a/scss/_section-contact.scss
+++ b/scss/_section-contact.scss
@@ -20,6 +20,10 @@
     margin-top: 1rem;
     text-align: center;
     width: 100%;
+    @include mq(576px) {
+      font-size: 2rem;
+      line-height: 2.6rem;
+    }
   }
 }
 
