--- a/css/main.css
+++ b/css/main.css
@@ -109,13 +109,16 @@
   }
 }
 .navbar-list .menu-items {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  line-height: 6rem;
+  height: 6rem;
   -webkit-transition: background-color 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
   width: 25%;
