--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -75,9 +75,10 @@
   }
 
   .menu-items {
+    align-items: center;
     display: flex;
     justify-content: center;
-    line-height: 6rem;
+    height: 6rem;
     transition: background-color 0.3s ease-in-out;
     width: 25%;
 
