--- a/scss/_section-portfolio.scss
+++ b/scss/_section-portfolio.scss
@@ -3,12 +3,25 @@
   display: flex;
   flex-direction: column;
   padding: 3rem 1rem 5rem;
+  @include mq(768px) {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    padding: 3rem 1.8rem 5rem;
+
+    .sections-title {
+      grid-column: 1 / -1;
+    }
+  }
 
   .description {
     margin-top: -0.5rem;
     @include mq(576px) {
       font-size: 1.8rem;
       line-height: 2.8rem;
+    }
+    @include mq(768px) {
+      grid-column: 4 / 10;
+      width: 100%;
     }
   }
 }
@@ -27,6 +40,23 @@
   @include mq(576px) {
     padding-top: 2.5rem;
     width: 45rem;
+  }
+  @include mq(768px) {
+    align-self: start;
+    justify-self: center;
+    width: 30.5rem;
+    &:nth-child(odd) {
+      grid-column: 1 / 7;
+    }
+    &:nth-child(even) {
+      grid-column: 7 / 13;
+    }
+  }
+
+  .portfolio-link {
+    @include mq(768px) {
+      height: 16rem;
+    }
   }
 
   // CIENIE
@@ -56,9 +86,10 @@
 .portfolio-example-img {
   display: block;
   margin: 0 auto;
-  width: 85%;
-  @include mq(576px) {
-    width: 90%;
+  max-height: 20rem;
+  max-width: 90%;
+  @include mq(768px) {
+    max-height: 16rem;
   }
 }
 
@@ -66,11 +97,14 @@
   background-color: var(--secondary-clr);
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
   padding: 2rem 2rem 2rem 2.5rem;
   width: 100%;
   @include mq(576px) {
-    padding: 2.5rem 3rem 2.5rem 3rem;
+    padding: 2.5rem 3rem 2.5rem;
+  }
+  @include mq(768px) {
+    padding: 2.5rem 1.5rem 1.5rem;
   }
 }
 
@@ -85,6 +119,10 @@
     font-size: 3rem;
     line-height: 3rem;
   }
+  @include mq(768px) {
+    font-size: 2.4rem;
+    line-height: 2.4rem;
+  }
 }
 
 .portfolio-example-description {
@@ -94,6 +132,10 @@
   line-height: 2.1rem;
   margin: 1rem 0 0 0;
   @include mq(576px) {
+    font-size: 1.6rem;
+    line-height: 2.3rem;
+  }
+  @include mq(768px) {
     font-size: 1.6rem;
     line-height: 2.3rem;
   }
