--- a/css/main.css
+++ b/css/main.css
@@ -694,6 +694,11 @@
   -webkit-transition: color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out;
 }
+@media screen and (min-width: 768px) {
+  .contact i {
+    font-size: 4.8rem;
+  }
+}
 .contact .description {
   color: var(--primary-clr);
   font-family: var(--text-font);
