--- a/scss/_section-contact.scss
+++ b/scss/_section-contact.scss
@@ -9,6 +9,9 @@
     color: var(--background-clr);
     font-size: 4rem;
     transition: color 0.2s ease-in-out;
+    @include mq(768px) {
+      font-size: 4.8rem;
+    }
   }
 
   .description {
