--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -73,6 +73,9 @@
     display: flex;
     justify-content: space-evenly;
   }
+  @include mq(992px) {
+    padding: 0 1.6rem;
+  }
 
   .menu-items {
     align-items: center;
@@ -90,9 +93,12 @@
       text-decoration: none;
       transition: color 0.3s ease-in-out;
       width: 100%;
+      @include mq(992px) {
+        font-size: 2.4rem;
+      }
 
       i {
-        margin-right: 5px;
+        margin-right: 0.5rem;
       }
     }
 
