--- a/css/main.css
+++ b/css/main.css
@@ -180,6 +180,16 @@
     height: 1176px;
   }
 }
+@media screen and (min-width: 992px) {
+  .header {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(2, auto) repeat(2, 1fr);
+    grid-column-gap: 2rem;
+    height: 697px;
+    padding: 13rem 2.6rem 0;
+  }
+}
 
 .greetings {
   color: var(--primary-clr);
@@ -192,6 +202,13 @@
   .greetings {
     font-size: 9.8rem;
     line-height: 9.8rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .greetings {
+    font-size: 12.5rem;
+    grid-column: 2 / 8;
+    justify-self: end;
   }
 }
 
@@ -211,6 +228,16 @@
     padding-bottom: 2.5rem;
   }
 }
+@media screen and (min-width: 992px) {
+  .greetings-sub {
+    -ms-flex-item-align: start;
+        align-self: start;
+    border-bottom: none;
+    justify-self: end;
+    grid-column: 3 / 8;
+    padding-bottom: 0;
+  }
+}
 
 .description {
   color: var(--primary-clr);
@@ -227,6 +254,18 @@
     font-size: 2rem;
     line-height: 3.5rem;
     width: 50%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .description {
+    -ms-flex-item-align: start;
+        align-self: start;
+    font-size: 2.1rem;
+    grid-column: 3 / 8;
+    justify-self: end;
+    line-height: 3.6rem;
+    text-align: left;
+    width: 100%;
   }
 }
 
@@ -250,6 +289,16 @@
     height: 24.5rem;
     margin-top: 5rem;
     width: 24.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .self-picture-wrapper {
+    height: 18rem;
+    justify-self: center;
+    margin-top: 3rem;
+    width: 18rem;
+    grid-column: 9 / 12;
+    grid-row: 1 / 3;
   }
 }
 
@@ -280,6 +329,16 @@
     font-size: 6rem;
     line-height: 6rem;
     margin-top: 5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .myname {
+    -ms-flex-item-align: start;
+        align-self: start;
+    font-size: 5.2rem;
+    line-height: 6.7rem;
+    margin-top: 1rem;
+    grid-column: 9 / 12;
   }
 }
 
@@ -317,6 +376,11 @@
     top: 455px;
   }
 }
+@media screen and (min-width: 992px) {
+  .triangle-small {
+    display: none;
+  }
+}
 
 .triangle-medium {
   background-color: var(--primary-clr);
@@ -352,6 +416,11 @@
     right: -160px;
   }
 }
+@media screen and (min-width: 992px) {
+  .triangle-medium {
+    display: none;
+  }
+}
 
 .triangle-big {
   background-color: var(--primary-clr);
@@ -385,6 +454,19 @@
     width: 460px;
     bottom: -230px;
     left: 146px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .triangle-big {
+    background-color: var(--primary-clr);
+    height: 27rem;
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+    margin: 78px auto;
+    position: static;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 27rem;
   }
 }
 
