--- a/scss/_section-portfolio.scss
+++ b/scss/_section-portfolio.scss
@@ -12,6 +12,14 @@
       grid-column: 1 / -1;
     }
   }
+  @include mq(992px) {
+    grid-column-gap: 2rem;
+    padding: 5rem 2.6rem 5rem;
+
+    .sections-title {
+      grid-column: 1 / -1;
+    }
+  }
 
   .description {
     margin-top: -0.5rem;
@@ -22,6 +30,11 @@
     @include mq(768px) {
       grid-column: 4 / 10;
       width: 100%;
+    }
+    @include mq(992px) {
+      justify-self: center;
+      text-align: center;
+      width: 37rem;
     }
   }
 }
@@ -52,10 +65,22 @@
       grid-column: 7 / 13;
     }
   }
+  @include mq(992px) {
+    width: 38rem;
+    &:nth-child(odd) {
+      grid-column: 2 / 7;
+    }
+    &:nth-child(even) {
+      grid-column: 7 / 12;
+    }
+  }
 
   .portfolio-link {
     @include mq(768px) {
       height: 16rem;
+    }
+    @include mq(992px) {
+      height: 19.5rem;
     }
   }
 
@@ -91,6 +116,9 @@
   @include mq(768px) {
     max-height: 16rem;
   }
+  @include mq(992px) {
+    max-height: 19.5rem;
+  }
 }
 
 .portfolio-example-description-wrapper {
@@ -105,6 +133,9 @@
   }
   @include mq(768px) {
     padding: 2.5rem 1.5rem 1.5rem;
+  }
+  @include mq(992px) {
+    padding: 2rem 3rem;
   }
 }
 
@@ -123,6 +154,10 @@
     font-size: 2.4rem;
     line-height: 2.4rem;
   }
+  @include mq(992px) {
+    font-size: 2.8rem;
+    line-height: 2.8rem;
+  }
 }
 
 .portfolio-example-description {
@@ -135,8 +170,8 @@
     font-size: 1.6rem;
     line-height: 2.3rem;
   }
-  @include mq(768px) {
-    font-size: 1.6rem;
-    line-height: 2.3rem;
+  @include mq(992px) {
+    font-size: 1.8rem;
+    line-height: 2.5rem;
   }
 }
