--- a/css/main.css
+++ b/css/main.css
@@ -113,10 +113,10 @@
     padding: 0 1.6rem;
   }
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1200px) {
   .navbar-list {
     margin: 0 auto;
-    padding: 0;
+    padding: 0 3rem;
     width: 120rem;
   }
 }
@@ -191,10 +191,20 @@
   .header {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, auto) repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
     grid-column-gap: 2rem;
     height: 697px;
     padding: 13rem 2.6rem 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    grid-template-columns: repeat(12, 7.5rem);
+    grid-template-rows: repeat(4, auto);
+    grid-column-gap: 2rem;
+    margin: 0 auto;
+    padding: 13rem 4rem 0;
+    width: 120rem;
   }
 }
 
@@ -216,6 +226,12 @@
     font-size: 12.5rem;
     grid-column: 2 / 8;
     justify-self: end;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .greetings {
+    grid-row: 1 / 2;
+    justify-self: start;
   }
 }
 
@@ -245,6 +261,13 @@
     padding-bottom: 0;
   }
 }
+@media screen and (min-width: 1200px) {
+  .greetings-sub {
+    grid-row: 2 / 3;
+    justify-self: start;
+    margin-top: 1rem;
+  }
+}
 
 .description {
   color: var(--primary-clr);
@@ -267,12 +290,17 @@
   .description {
     -ms-flex-item-align: start;
         align-self: start;
-    font-size: 2.1rem;
     grid-column: 3 / 8;
     justify-self: end;
     line-height: 3.6rem;
     text-align: left;
     width: 100%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .description {
+    grid-column: 3 / 7;
+    margin-top: 5rem;
   }
 }
 
@@ -300,12 +328,20 @@
 }
 @media screen and (min-width: 992px) {
   .self-picture-wrapper {
+    grid-column: 9 / 12;
+    grid-row: 1 / 3;
     height: 18rem;
     justify-self: center;
     margin-top: 3rem;
     width: 18rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .self-picture-wrapper {
     grid-column: 9 / 12;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
+    height: 26rem;
+    width: 26rem;
   }
 }
 
@@ -346,6 +382,12 @@
     line-height: 6.7rem;
     margin-top: 1rem;
     grid-column: 9 / 12;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .myname {
+    grid-row: 4 / 5;
+    margin-top: 0;
   }
 }
 
@@ -466,14 +508,22 @@
 @media screen and (min-width: 992px) {
   .triangle-big {
     background-color: var(--primary-clr);
-    height: 27rem;
     grid-column: 1 / -1;
     grid-row: 4 / 5;
+    height: 27rem;
     margin: 78px auto;
     position: static;
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
     width: 27rem;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .triangle-big {
+    grid-row: 4 / 6;
+    height: 32rem;
+    margin: 99px auto;
+    width: 32rem;
   }
 }
 
