--- a/scss/_section-header.scss
+++ b/scss/_section-header.scss
@@ -16,10 +16,18 @@
   @include mq(992px) {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, auto) repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
     grid-column-gap: 2rem;
     height: 697px;
     padding: 13rem 2.6rem 0;
+  }
+  @include mq(1200px) {
+    grid-template-columns: repeat(12, 7.5rem);
+    grid-template-rows: repeat(4, auto);
+    grid-column-gap: 2rem;
+    margin: 0 auto;
+    padding: 13rem 4rem 0;
+    width: 120rem;
   }
 }
 
@@ -37,6 +45,10 @@
     font-size: 12.5rem;
     grid-column: 2 / 8;
     justify-self: end;
+  }
+  @include mq(1200px) {
+    grid-row: 1 / 2;
+    justify-self: start;
   }
 }
 
@@ -60,6 +72,11 @@
     grid-column: 3 / 8;
     padding-bottom: 0;
   }
+  @include mq(1200px) {
+    grid-row: 2 / 3;
+    justify-self: start;
+    margin-top: 1rem;
+  }
 }
 
 .description {
@@ -78,12 +95,15 @@
   }
   @include mq(992px) {
     align-self: start;
-    font-size: 2.1rem;
     grid-column: 3 / 8;
     justify-self: end;
     line-height: 3.6rem;
     text-align: left;
     width: 100%;
+  }
+  @include mq(1200px) {
+    grid-column: 3 / 7;
+    margin-top: 5rem;
   }
 }
 
@@ -105,12 +125,18 @@
     width: 24.5rem;
   }
   @include mq(992px) {
+    grid-column: 9 / 12;
+    grid-row: 1 / 3;
     height: 18rem;
     justify-self: center;
     margin-top: 3rem;
     width: 18rem;
+  }
+  @include mq(1200px) {
     grid-column: 9 / 12;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
+    height: 26rem;
+    width: 26rem;
   }
 }
 
@@ -144,6 +170,10 @@
     line-height: 6.7rem;
     margin-top: 1rem;
     grid-column: 9 / 12;
+  }
+  @include mq(1200px) {
+    grid-row: 4 / 5;
+    margin-top: 0;
   }
 }
 
@@ -201,12 +231,18 @@
   }
   @include mq(992px) {
     background-color: var(--primary-clr);
-    height: 27rem;
     grid-column: 1 / -1;
     grid-row: 4 / 5;
+    height: 27rem;
     margin: 78px auto;
     position: static;
     transform: rotate(45deg);
     width: 27rem;
+  }
+  @include mq(1200px) {
+    grid-row: 4 / 6;
+    height: 32rem;
+    margin: 99px auto;
+    width: 32rem;
   }
 }
